--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,18 @@
     <dependencies>
 
         <!-- https://mvnrepository.com/artifact/us.codecraft/webmagic-parent -->
+        <!-- https://mvnrepository.com/artifact/org.apache.tika/tika-parsers -->
+       <!-- <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-parsers</artifactId>
+            <version>1.20</version>
+        </dependency>
+        &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.tika/tika-core &ndash;&gt;
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-core</artifactId>
+            <version>1.20</version>
+        </dependency>-->
 
 
         <dependency>
@@ -103,11 +115,6 @@
         </dependency>
 
         <!-- 工具 -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.7</version>
-        </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
